---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/extern_type_cell.arc

---
extern type Cell(x: i32) {
    fun set(x: i32): unit, 
    fun get(): i32
}
fun main() {
    val c = Cell(5);
    val x = c.get();
    val y = c.set(x + x);
    
}

